[tool.poetry]
name = "dinobot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
"discord.py" = "^1.6.0"
Flask = "^1.1.2"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
